--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -35,6 +35,10 @@ li {
   min-width: 550px;
   max-width: 550px;
   text-align: left;
+
+    #name {
+        text-align: center;
+    }
     
     .toRight {
             text-align: right;
@@ -43,15 +47,30 @@ li {
     .toLeft {
             text-align: left;
         }
+
     a {
       font-weight: normal;
-        color: #666;
+        color: $twitter-blue;
         font-size: 16px;
     }
+    a:visited {
+        color: #bbb;
+        background-color: transparent;
+        text-decoration: none;
+    }
+    a:hover {
+        color:#265a88;
+        text-decoration: none;
+    }
+    
+
     p {
         font-size: 18px;
         font-weight: normal;
         line-height: 20px;  
+    }
+    p#text {
+        margin-top: 10px;
     }
     i {
         color: #bbb;
