--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -72,6 +72,13 @@ li {
     p#text {
         margin-top: 10px;
     }
+    img#image {
+        display: block;
+        max-width: 500px;
+        max-height: 500px;
+        margin: auto;
+        margin-bottom: 10px;
+    }
     i {
         color: #bbb;
         padding-right: 4px;
